--- a/frontend/src/layouts/MainLayout/MainLayout.scss
+++ b/frontend/src/layouts/MainLayout/MainLayout.scss
@@ -19,7 +19,12 @@
     padding: 24px 0;
     
     @media (max-width: 768px) {
-      width: 98%;
+      width: 94%;
+      padding: 16px 0;
+    }
+    
+    @media (max-width: 480px) {
+      width: 92%;
       padding: 16px 0;
     }
     
